--- a/frontend/src/HomePage.css
+++ b/frontend/src/HomePage.css
@@ -93,7 +93,7 @@
 }
 
 .popRecipes-container {
-    width: 100%;
+    width: 80%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -104,8 +104,8 @@
 }
 
 .popRecipe {
-    width: 35%;
-    height: 100px;
+    width: 360px;
+    height: 110px;
     background: #FFFFFF;
     opacity: 0.9;
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.15);
