--- a/frontend/src/Startup/Startup.css
+++ b/frontend/src/Startup/Startup.css
@@ -3,9 +3,46 @@
 }
 
 .main {
+    height: 0%;
     width: 100%;
+
+    position: relative;
     display: flex;
     flex-direction: column;
+}
+
+.feild{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.keyin{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.flex_container{
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.login-input-bar {
+    width: 35%;
+    background: #FFFFFF;
+    opacity: 0.9;
+    box-shadow: 0px 4px 16px gray;
+    border-radius: 15px;
+    border: 1px solid gray;
+    padding: 2%;
+
+    position: relative;
+    text-align: start;
 }
 
 /* .meet_main {
@@ -16,6 +53,6 @@
 
     display: flex;
     flex-direction: row-reverse;
-    justify-content: space-between;
     flex-wrap: wrap;
+    justify-content: space-between;
 } */
