--- a/frontend/src/SetPassword/SetPassword.css
+++ b/frontend/src/SetPassword/SetPassword.css
@@ -17,7 +17,7 @@
 
 #title {
     font-size:30px;
-    /* text-align: center; */
+    text-align: center;
 }
 
 textarea:focus, input:focus{
@@ -42,7 +42,7 @@ textarea:focus, input:focus{
 }
 
 #code {
-    width: 50%;
+    width: 40%;
 }
 
 #send {
@@ -85,8 +85,8 @@ textarea:focus, input:focus{
     justify-content: center;
 }
 
-.wrapper {
-    position:fixed;
+.container {
+    /* position:fixed; */
     width:100%;
     height:100%;
     display: flex;
