--- a/frontend/src/Recipe/recipe.css
+++ b/frontend/src/Recipe/recipe.css
@@ -1,3 +1,13 @@
+.recipe{
+    width: 100%;
+    height: 80vh;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+
+}
+
 .bottom {
     display: flex;
     flex-direction: column;
@@ -47,6 +57,6 @@
     /* width: 100%; */
     /* background: url(https://sudachirecipes.com/wp-content/uploads/2022/08/beef-curry-rice-thumbnail.jpg); */
     border-radius: 15px 0px 0px 15px;
-    max-height:100%; 
+    max-height:100%;
     max-width:100%;
 }
