--- a/frontend/src/Recipe/recipe.css
+++ b/frontend/src/Recipe/recipe.css
@@ -1,10 +1,11 @@
-.recipe{
+.recipe-container{
     width: 100%;
     height: 80vh;
-    position: absolute;
+    /*position: absolute;*/
     display: flex;
     align-items: center;
-    flex-direction: row;
+    flex-direction: column;
+    /*justify-content: center;*/
 
 }
 
@@ -12,7 +13,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 10%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .popRecipes-container {
