--- a/frontend/src/Recipe/searchbar.css
+++ b/frontend/src/Recipe/searchbar.css
@@ -10,6 +10,7 @@
   top: ;*/
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   align-items: center;
+  justify-content: center;
 }
 
 .searchText{
