--- a/frontend/src/MyPage/MyPage.css
+++ b/frontend/src/MyPage/MyPage.css
@@ -61,7 +61,7 @@
   top: 20%;
   display: flex;
   flex-direction: column;
-  position: relative;
+  /* position: relative; */
 }
 .main-mypage .right-section .setting-bar-container .setting-bar {
   font-size: 16px;
