--- a/frontend/src/MyPage/MyPage.scss
+++ b/frontend/src/MyPage/MyPage.scss
@@ -66,7 +66,7 @@
             top: 20%;
             display: flex;
             flex-direction: column;
-            position: relative;
+            // position: relative;
 
             .setting-bar {
                 // position: relative;
