add navigate to elements

--- a/frontend/src/HomePage/HomePage.css
+++ b/frontend/src/HomePage/HomePage.css
@@ -154,6 +154,10 @@
     align-items: center;
 }
 
+.popRecipe:hover {
+    cursor: pointer;
+}
+
 .poptitle {
     font-size: small;
     font-weight: 500;
