--- a/frontend/src/Recipe/detail.css
+++ b/frontend/src/Recipe/detail.css
@@ -86,6 +86,10 @@
     flex-direction: row-reverse;
 }
 
+.exit:hover {
+    cursor: pointer;
+}
+
 .topic {
     font-size: large;
     font-weight: 500;
