modify mypage css ><

--- a/frontend/src/MyPage/MyPage.css
+++ b/frontend/src/MyPage/MyPage.css
@@ -54,6 +54,7 @@
 .main-mypage .right-section {
   width: 50%;
   height: 100%;
+  margin-top: 5%;
 }
 .main-mypage .right-section .setting-bar-container {
   width: 30%;
