--- a/frontend/src/MyPage/MyPage.scss
+++ b/frontend/src/MyPage/MyPage.scss
@@ -59,6 +59,7 @@
     .right-section {
         width: 50%;
         height: 100%;
+        margin-top: 5%;
 
         .setting-bar-container {
             width: 30%;
