--- a/frontend/src/Recipe/searchbar.css
+++ b/frontend/src/Recipe/searchbar.css
@@ -1,4 +1,6 @@
 .searchbar{
+  margin-top: 1%;
+  margin-bottom: 1%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -16,15 +18,25 @@
 
 .searchline{
   /*padding-top: 1vh;*/
-  /*flex-grow: 1;*/
+  flex-grow: 1;
 }
 
 .searchText{
   border: 0;
   position: relative;
-  width: 95%;
+  width: 80%;
   margin-left: 1.5vw;
   font-size: 18px;
+}
+
+.searchButton{
+  width: 5%;
+  float: right;
+  margin-right: 2%;
+}
+
+.searchImg{
+  width: 100%;
 }
 
 .search-ingredients{
