--- a/frontend/src/MyFridge/myfridge.css
+++ b/frontend/src/MyFridge/myfridge.css
@@ -15,3 +15,16 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 0.5rem;
 }
+
+.fridge-add-ing-input {
+    border: ridge;
+    height: 38px;
+    border-radius: 0.5rem;
+}
+
+.fridge-add-ing-delete-button {
+    border: none;
+    background-color: #E3DBF0;
+    color: black;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
