--- a/frontend/src/Recipe/detail.css
+++ b/frontend/src/Recipe/detail.css
@@ -2,14 +2,16 @@
     width: 100%;
     height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 130px;
 }
 
 .modal-container {
-    width: 90%;
+    width: 80%;
     height: fit-content;
-    display: flex;
+    display: flex; 
     flex-direction: row;
     padding: 20px;
     background: #FFFFFF;
@@ -102,6 +104,47 @@
 ol, ul {
     padding-left: 1.2rem;
 }
+
+.comment-container{
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    margin: 30px;
+}
+
+.comment{
+    font-size: 30px;
+}
+
+.single-comment-container {
+    margin: 10px;
+    width: 1150px;
+    height: fit-content;
+    display: flex; 
+    flex-direction: row;
+    padding: 20px;
+    background: #FFFFFF;
+    opacity: 0.9;
+    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.15);
+    border-radius: 15px;
+}
+
+.comment-input{
+    margin: 10px;
+}
+
+.comment-input input[type="text"] {
+    width: 1080px;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+.comment-input input[type="submit"] {
+    border-radius: 10px;
+    padding: 5px;
+}
+
+
 
 
 
