--- a/frontend/src/RegisterPage/RegisterPage.css
+++ b/frontend/src/RegisterPage/RegisterPage.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     border: 1px solid #AEAEAE;
     border-radius: 20px;
-    font-family: Poppins;
+    font-family: Open Sans;
     font-size: 17px;
     font-weight: 500;
     line-height: 30px;
@@ -17,7 +17,7 @@ textarea:focus, input:focus{
     outline: none;
 }
 
-#register {
+#welcome2 {
     display: inline-block;
     font-size:30px;
 }
@@ -69,11 +69,11 @@ textarea:focus, input:focus{
     background-color: gray;
 } */
 
-#info {
-    width: 35%;
+.body #info {
+    width: 60%;
     display: flex;
     flex-direction: column;
-    font-family: 'Poppins';
+    font-family: Open Sans;
 }
 
 .infos {
@@ -95,18 +95,15 @@ textarea:focus, input:focus{
       /*5px red then 2px transparent -> repeat this!*/
 }
 
-#login{
-    border-radius: 80px;
-    cursor:pointer;
-    border:0 none;
-    height: 40px;
-}
 #signup{
     border-radius: 80px;
     cursor:pointer;
     border:0 none;
     height: 40px;
+    font-family: Open Sans;
+    font-size: 17px;
 }
+
 #google-icon {
     display:'flex';
     justify-content:'center';
@@ -131,6 +128,8 @@ textarea:focus, input:focus{
     height:80%;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+
 }
 
 .container {
@@ -145,7 +144,7 @@ textarea:focus, input:focus{
 #googlelogo {
     margin:3%;
     padding:20%;
-    border:1px solid rgb(165, 165, 165); 
+    border:1px solid rgb(239, 155, 155); 
     border-radius:50%;
 }
 
@@ -154,7 +153,7 @@ textarea:focus, input:focus{
     align-items: center;
     justify-content: center;
     border-radius:50%;
-    border:1px solid rgb(165, 165, 165); 
+    border:1px solid rgb(239, 155, 155); 
     background-color: #ffffff;
     padding: 5px 5px;
     margin: 2%;
