--- a/frontend/src/Header/Header.css
+++ b/frontend/src/Header/Header.css
@@ -1,6 +1,6 @@
 .navbar {
     width: 80%;
-    height: 10vh;
+    /* height: 10vh; */
     display: flex;
     flex-direction: row;
 }
@@ -12,35 +12,33 @@
     align-items: center;
     justify-content: center;
 }
+
 #feedmelogo:hover {
     cursor: pointer;
 }
 
 .navbuttonList {
-    width: 50%;
+    width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.navbutton {
+
+.nav-link {
     display: inline-block;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     border: none;
     background-color: white;
     transition: 0.5s;
-}
-.navbutton:hover {
-    text-decoration: underline;
+    margin-left: 2rem;
+    margin-right: 2rem;
 }
 
-.nav-user {
-    display: flex;
-    width: 7.5%;
-    height: 100%;
-    align-items: center;
-    justify-content: space-between;
+.nav-link:hover {
+    font-size: 20px;
+    text-decoration: underline;
 }
 
 .nav-fav {
@@ -50,6 +48,7 @@
     align-items: center;
     justify-content: center;
 }
+
 #favIcon {
     display: block;
     height: 3vh;
@@ -57,12 +56,15 @@
     color: gold;
     /* filter: drop-shadow(0px 0px 4px gray) */
 }
+
 .nav-fav:hover #favIcon{
     display: none;
 }
+
 #favIconHover {
     display: none;
 }
+
 .nav-fav:hover #favIconHover{
     display: block;
     height: 3vh;
@@ -72,6 +74,16 @@
     /* filter: drop-shadow(0px 0px 5px gray) */
 }
 
+.nav-user {
+    display: flex;
+    width: 7.5%;
+    height: 100%;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 2rem;
+    margin-right: 2rem;
+}
+
 .nav-user-icon {
     display: flex;
     width: auto;
@@ -79,11 +91,13 @@
     align-items: center;
     justify-content: center;
 }
+
 #userIcon {
     display: block;
     height: 3vh;
     width: 3vh;
 }
+
 #userIcon:hover {
     cursor: pointer;
 }
