--- a/frontend/src/Recipe/recipe.css
+++ b/frontend/src/Recipe/recipe.css
@@ -1,6 +1,6 @@
 .recipe-container{
     width: 100%;
-    height: 80vh;
+    /* height: 80vh; */
     /*position: absolute;*/
     display: flex;
     align-items: center;
