--- a/frontend/src/Recipe/Components/SearchBar.css
+++ b/frontend/src/Recipe/Components/SearchBar.css
@@ -91,7 +91,7 @@
     /* border-radius: 10px; */
 }
 
-.ingredients {
+.search-ingredients {
     width: 100%;
     display: flex;
     padding: 3%;
