--- a/frontend/src/Recipe/detail.css
+++ b/frontend/src/Recipe/detail.css
@@ -122,39 +122,81 @@ ol, ul {
     display: flex;
     flex-direction: column;
     align-items: left;
-    margin: 30px;
+    margin: 4%;
 }
 
-.comment{
+.comments{
     font-size: 30px;
 }
 
 .single-comment-container {
-    margin: 10px;
-    width: 1150px;
+    /* margin: 1%; */
+    width: 100%;
     height: fit-content;
     display: flex; 
     flex-direction: row;
-    padding: 20px;
-    background: #FFFFFF;
-    opacity: 0.9;
-    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.15);
+    padding: 1em;
+    /* background: #FFFFFF; */
+    /* background-color: beige; */
+    /* opacity: 0.9; */
+    /* box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.15); */
     border-radius: 15px;
+    align-items: center;
+}
+
+.comment-avatar {
+    width: 8%;
+}
+
+.comment-avatar img{
+    width: -webkit-fill-available;
+    border-radius: 50px;
+}
+
+.comment {
+    width: auto;
+    margin-left: 1em;
+    font-size: 1.5em;
+}
+
+.nameAndTime {
+    display: flex;
+    align-items: center;
+}
+
+.commenter {
+    font-size: 1em;
+    font-weight: 800;
+}
+
+.comment-time {
+    font-size: smaller;
+    /* font-style: italic; */
+    opacity: 0.5;
+    margin-left: 1em;
 }
 
 .comment-input{
-    margin: 10px;
+    margin: 1em;
+    display: flex;
+    align-items: center;
 }
 
 .comment-input input[type="text"] {
-    width: 1080px;
-    border-radius: 10px;
+    width: 80%;
+    /* border-radius: 10px; */
+    height: fit-content;
     padding: 5px;
+    margin-left: 1em;
 }
 
-.comment-input input[type="submit"] {
+.submit-text {
     border-radius: 10px;
     padding: 5px;
+    border-style: none;
+    width: 10%;
+    /* height: 10%; */
+    margin-left: 1em;
 }
 
 
