--- a/frontend/src/Recipe/recipe.css
+++ b/frontend/src/Recipe/recipe.css
@@ -12,8 +12,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin: 0;
 }
 
 .popRecipes-container {
