modify reset password page

--- a/frontend/src/RegisterPage/RegisterPage.css
+++ b/frontend/src/RegisterPage/RegisterPage.css
@@ -73,7 +73,7 @@ textarea:focus, input:focus{
     width: 60%;
     display: flex;
     flex-direction: column;
-    font-family: Open Sans;
+    font-family: 'Open Sans';
 }
 
 .infos {
@@ -157,16 +157,15 @@ textarea:focus, input:focus{
     background-color: #ffffff;
     padding: 5px 5px;
     margin: 2%;
-  }
+}
   
-  .twitter-button img {
+.twitter-button img {
     /* margin-right: 10px; */
     height: 40px;
     width: 40px;
+}
 
-  }
-
-  label:hover {
+label:hover {
     background:#eee;
     cursor:pointer;
-   }
+}
