--- a/frontend/src/SetPassword/SetPassword.css
+++ b/frontend/src/SetPassword/SetPassword.css
@@ -1,10 +1,8 @@
 .input {
     box-sizing: border-box;
-
-
     border: 1px solid #AEAEAE;
     border-radius: 20px;
-    font-family: Poppins;
+    font-family: 'Open Sans';
     font-size: 17px;
     font-weight: 500;
     line-height: 30px;
@@ -15,15 +13,14 @@
 
 }
 
-#title {
+/* #title {
     font-size:30px;
     text-align: center;
-}
+} */
 
 textarea:focus, input:focus{
     outline: none;
 }
-
 
 #logo {
     width: 60%;
@@ -56,7 +53,7 @@ textarea:focus, input:focus{
     width: 35%;
     display: flex;
     flex-direction: column;
-    font-family: 'Poppins';
+    font-family: 'Open Sans';
 }
 
 .infos {
@@ -64,10 +61,9 @@ textarea:focus, input:focus{
     margin-bottom: 2%;
 }
 
-
 #reset{
     border-radius: 80px;
-    cursor:pointer;
+    cursor: pointer;
     border:0 none;
     height: 40px;
 }
@@ -83,12 +79,14 @@ textarea:focus, input:focus{
     height:80%;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
 
 .container {
     /* position:fixed; */
     width:100%;
     height:100%;
+    margin-bottom: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
