--- a/frontend/src/Recipe/recipeadd.css
+++ b/frontend/src/Recipe/recipeadd.css
@@ -1,18 +1,3 @@
-.recipeadd-table {
-    font-size: 11pt;
-}
-
-.recipeadd-btn {
-    font-size: 11pt;
-    margin: 1rem 0rem 1rem 2rem;
-    vertical-align: top;
-    font-weight: 500;
-    border: none;
-    background-color: #E3DBF0;
-    color: black;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
 .recipeadd-fixed-button {
     position: fixed;
     bottom: 5%;
@@ -27,42 +12,47 @@
     font-weight: 900;
     cursor: pointer;
     z-index: 999;
-  }
-  
+}
+
+.recipe-add-title {
+    font-size: x-large;
+    font-weight: 600;
+}
+
+.recipeadd-btn {
+    font-size: small;
+    margin: 8px;
+    vertical-align: top;
+    font-weight: 500;
+    border: none;
+    background-color: #E3DBF0;
+    color: black;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.recipeadd-table {
+    font-size: small;
+    margin: 2%;
+}
+
 .recipeadd-input {
-    width: 20%;
-    margin: 1rem 2rem;
+    width: 150px;
+    margin: 10px;
 }
 
 .recipeadd-textarea {
     width: 60%;
-    margin: 1rem 2rem;
+    height: 100px;
+    margin: 10px;
 }
 
-/* md */
-@media (min-width: 768px) and (max-width: 991.98px) {
-    .recipeadd-input {
-      width: 25%;
-    }
-}
-
-/* sm */
-@media (min-width: 576px) and (max-width: 767.98px) {
-    .recipeadd-input {
-      width: 31%;
-    }
-}
-
-/* xs */
-@media (max-width: 575.98px) {
-    .recipeadd-btn{
-        margin: 1rem 0rem 1rem 1rem;
-    }
-    .recipeadd-input {
-        width: 33%;
-        margin: 1rem;
-    }
-    .recipeadd-textarea {
-        margin: 1rem;
-    }
+.recipeadd-instruction-btn {
+    font-size: small;
+    margin: 45px 10px;
+    vertical-align: top;
+    font-weight: 500;
+    border: none;
+    background-color: #E3DBF0;
+    color: black;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
