--- a/frontend/src/MyFridge/myfridge.css
+++ b/frontend/src/MyFridge/myfridge.css
@@ -1,8 +1,53 @@
+#fridge-search-bar {
+    width: 80%;
+    font-size: 1.5em;
+    padding: 0.5em;
+    border-radius: 0 10px 10px 0;
+    border: 1px solid rgba(43, 41, 41, 0.615);
+    border-left: 0px;
+}
+
+.fridge-container{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.fridge-ingredients-container {
+    width: 75%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    /* justify-content: flex-start; */
+    justify-content: center;
+    padding: 2%;
+    height: auto;
+}
+
+.fridge-condition-section {
+    width: 100%;
+    padding: 2%;
+    background-color: #EEEEEE;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 0.5rem;
+}
+
+.fridge-category-title {
+    font-size: medium;
+    font-weight: 500;
+    margin: 10px;
+}
+
 .fridge-functional-button {
     border: none;
     background-color: #E3DBF0;
     color: black;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-size: small;
+    font-weight: 500;
+    width: 150px;
+    margin: 10px;
 }
 
 .fridge-functional-button:hover{
@@ -10,19 +55,39 @@
     color: black;
 }
 
-.fridge-condition-section {
-    background-color: #EEEEEE;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 0.5rem;
+.fridge-render-section {
+    width: 100%;
+    padding: 2%;
 }
 
-.fridge-add-ing-input {
-    border: ridge;
-    height: 38px;
-    border-radius: 0.5rem;
+.fridge-render-card {
+    width: 150px;
+    margin: 5px 10px;
+    display: inline-block;
 }
 
-.fridge-add-ing-delete-button {
+.fridge-render-span {
+    display: block;
+    text-align: right;
+    font-size: smaller;
+}
+
+.fridge-render-button {
+    width: 100%;
+    font-size: small;
+    font-weight: 500;
+}
+
+.fridge-edit-title {
+    font-size: x-large;
+    font-weight: 600;
+}
+
+.fridge-edit-btn {
+    font-size: small;
+    margin: 8px;
+    vertical-align: top;
+    font-weight: 500;
     border: none;
     background-color: #E3DBF0;
     color: black;
