--- a/frontend/src/Recipe/Components/SearchBar.css
+++ b/frontend/src/Recipe/Components/SearchBar.css
@@ -1,5 +1,5 @@
 .searchbar-container {
-    width: 80%;
+    min-width: 60%;
     height: auto;
     padding: 5vw;
     /* background-color: antiquewhite; */
