--- a/frontend/src/MyPage/MyPage.css
+++ b/frontend/src/MyPage/MyPage.css
@@ -7,9 +7,9 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 100%;
-  margin-top: 5%;
-  margin-left: 5%;
+  height: 100vh;
+  /* margin-top: 5%; */
+  /* margin-left: 5%; */
 }
 .main-mypage .left-section {
   width: 50%;
@@ -19,13 +19,21 @@
   flex-direction: column;
 }
 .main-mypage .left-section .user-info-container {
-  margin-left: 40%;
+  padding: 4rem;
+  flex-direction: column;
+  width: 100%;
+  height: 70%;
+  display: flex;
+  align-items: flex-end;
+}
+.main-mypage .left-section .user-info-container .user-middle-container {
+  display: flex;
   flex-direction: column;
 }
 .main-mypage .left-section .user-info-container .user-pic-container {
   position: relative;
-  margin-top: 10%;
-  margin-bottom: 10%;
+  /* margin-top: 10%; */
+  /* margin-bottom: 10%; */
   text-align: center;
 }
 .main-mypage .left-section .user-info-container .user-pic-container .user-pic {
@@ -37,15 +45,23 @@
   position: relative;
   text-align: center;
   margin: 5%;
+  font-size: 1.8em;
   clear: both; /*清除浮動*/
 }
 .main-mypage .left-section .user-info-container .logout-btn {
   position: relative;
   border: none;
-  margin-top: 10%;
+  /* margin-top: 10%; */
+  display: flex;
   text-align: center;
   background-color: none;
+  justify-content: center;
+  align-items: center;
 }
+.main-mypage .left-section .user-info-container .logout-btn .logout-text{
+  margin-right: 2%;
+}
+
 .main-mypage .left-section .user-info-container .logout-btn:hover {
   color: #c7c7c7;
   transition: 0.2s;
@@ -54,10 +70,10 @@
 .main-mypage .right-section {
   width: 50%;
   height: 100%;
-  margin-top: 5%;
+  /* margin-top: 5%; */
 }
 .main-mypage .right-section .setting-bar-container {
-  width: 30%;
+  width: 100%;
   left: 10%;
   top: 20%;
   display: flex;
@@ -68,11 +84,12 @@
   font-size: 16px;
   box-shadow: 3px 3px 6px #d5d5d5;
   flex-direction: row;
+  align-items: center;
   display: inline-flex;
-  border-radius: 6px;
-  width: 270px;
-  height: 40px;
-  padding: 5%;
+  border-radius: 10px;
+  width: 40%;
+  height: auto;
+  padding: 2%;
   left: 60vw;
   top: 25vh;
   margin: 23px;
