--- a/frontend/src/MyFridge/fridgeadd.css
+++ b/frontend/src/MyFridge/fridgeadd.css
@@ -6,12 +6,18 @@
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 0.5rem;
-    background-color: #AAC2B4;
+    background-color: #E3DBF0;
     color: black;
-    font-size: 12pt;
-    font-weight: 900;
+    font-size: small;
+    font-weight: 500;
     cursor: pointer;
     z-index: 999;
+}
+
+.fridgeadd-icon {
+    display: inline;
+    margin: 3px 10px 3px 0px;
+    font-size: medium;
 }
 
 .fridgeadd-title {
