--- a/frontend/src/MyPage/MyPage.scss
+++ b/frontend/src/MyPage/MyPage.scss
@@ -73,7 +73,7 @@
                 // position: relative;
                 justify-content: space-around;
                 // align-items: center;
-                font-size: 16px;
+                // font-size: 16px;
                 box-shadow: 3px 3px 6px #d5d5d5;
                 flex-direction: row;
                 display: inline-flex;
