--- a/frontend/src/HomePage/HomePage.css
+++ b/frontend/src/HomePage/HomePage.css
@@ -19,28 +19,47 @@
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 900;
-    font-size: xxx-large;
+    font-size: 5em;
     /* line-height: 102px; */
     text-align: center;
     color: #000000;
+}
+
+@media screen and (max-width: 600px) {
+    .main-title {
+      font-size: 3em;
+    }
 }
 
 .subtitle {
     margin-top: 3%;
     margin-bottom: 3%;
     text-align: center;
-    font-size: 12px;
+    font-size: 1.5em;
 }
+
+@media screen and (max-width: 600px){
+    .subtitle {
+        font-size: 1em;
+    }
+}
+
 
 .top button {
     background: #59B1E6;
     border-radius: 10px;
     color: white;
-    font-size: 16px;
+    font-size: 1.5em;
     font-weight: 700;
     width: 150px;
     height: 50px;
     border-style: none;
+}
+
+@media screen and (max-width: 600px){
+    .top button {
+        font-size: 1em;
+    }
 }
 
 .middle {
@@ -78,7 +97,7 @@
     opacity: 0.9;
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.15);
     border-radius: 15px;
-    padding: 2%;
+    padding: 2em;
     margin: 15px;
 }
 
@@ -97,14 +116,14 @@
 }
 
 .recipe-title {
-    font-size: medium;
+    font-size: 2em;
     font-weight: 700;
     margin-bottom: 10px;
 }
 
 .recipe-content {
-    font-size: small;
-    margin-bottom: 20px;
+    font-size: 1em;
+    /* margin-bottom: 20px; */
 }
 
 .instructions {
@@ -121,7 +140,7 @@
     border-radius: 10px;
     color: white;
     border-style: none;
-    font-size: 16px;
+    font-size: 1.5em;
     font-weight: 700;
     width: 120px;
     height: 40px;
@@ -183,4 +202,6 @@
     border-radius: 15px 0px 0px 15px;
     max-height:100%; 
     max-width:100%;
+    height: 100%;
+    width: 100%;
 }
