--- a/frontend/src/Recipe/detail.css
+++ b/frontend/src/Recipe/detail.css
@@ -23,21 +23,23 @@
 .modal-container-from-data {
     height: fit-content;
     display: flex; 
-    flex-direction: row;
+    flex-direction: column;
     padding: 20px;
 }
 
-.modal-left {
-    width: 50%;
+.modal-top {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    padding: 5%;
+    padding-top: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 .top-part {
     display: flex;
-    margin-bottom: 2rem;
+    margin-bottom: 2em;
 }
 
 .image {
@@ -57,16 +59,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 .title {
-    font-size: x-large;
+    font-size: 3em;
     text-align: center;
+    font-weight: 500;
 }
 
 .serving-size {
-    font-size: small;
+    font-size: 1.5em;
     margin: 5px;
 }
 
@@ -85,16 +88,35 @@
     font-weight: 500;
 }
 
-.ingredients {
-    margin-top: 3rem;
+.modal-content {
+    width: 100%;
+    padding: 5%;
+    flex-direction: row;
 }
 
-.modal-right {
-    width: 50%;
-    padding-right: 5%;
-    padding-top: 5%;
-    padding-bottom: 5%;
+.ingredients {
+    /* margin-top: 3rem; */
+    width: 40%;
 }
+
+.instructions {
+    padding-inline-start: 0;
+    width: 58%;
+    margin-left: 2%;
+}
+
+@media screen and (max-width: 600px) {
+    .modal-content {
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .ingredients, .instructions {
+        width: 100%;
+    }
+}
+
 
 .exit {
     display: flex;
@@ -112,10 +134,15 @@
 
 .content {
     font-size: small;
+    padding-inline-start: 1em;
 }
 
-ol, ul {
+ol {
     padding-left: 1.2rem;
+}
+
+ul {
+    padding-left: 0;
 }
 
 .comment-container{
