--- a/frontend/src/Recipe/detail.css
+++ b/frontend/src/Recipe/detail.css
@@ -12,7 +12,7 @@
     width: 80%;
     height: fit-content;
     display: flex; 
-    flex-direction: row;
+    flex-direction: column;
     padding: 20px;
     background: #FFFFFF;
     opacity: 0.9;
@@ -25,6 +25,7 @@
     display: flex; 
     flex-direction: column;
     padding: 20px;
+    align-items: center;
 }
 
 .modal-top {
@@ -40,10 +41,11 @@
 .top-part {
     display: flex;
     margin-bottom: 2em;
+    justify-content: space-between;
 }
 
 .image {
-    width: 40%;
+    width: 35%;
     /* background-color: aqua; */
 }
 
