--- a/frontend/src/Recipe/detail.css
+++ b/frontend/src/Recipe/detail.css
@@ -231,6 +231,29 @@ ul {
 }
 
 
+.recipeedit-fixed-button {
+    position: fixed;
+    bottom: 5%;
+    right: 5%;
+    padding: 5px 20px 10px 20px;
+    border: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 0.5rem;
+    background-color: #E3DBF0;
+    color: black;
+    font-size: small;
+    font-weight: 500;
+    cursor: pointer;
+    z-index: 1000;
+}
 
+.hover-effect:hover {
+    background-color: antiquewhite;
+    opacity: 1;
+    cursor: pointer;
+}
 
-
+textarea {
+    width: 100%;
+    padding: 1em;
+}
