--- a/frontend/src/Recipe/Components/SearchBar.css
+++ b/frontend/src/Recipe/Components/SearchBar.css
@@ -16,20 +16,24 @@
     /* justify-content: space-around; */
 }
 
-.combined-searchbar {
-    width: 100%;
-    display: flex;
-}
-
-.combined-searchbar #search-bar{
-    /* border: 1px solid blueviolet; */
+.inputbar-container{
+    width: 80%;
+    font-size: 1.5em;
+    padding: 0.5em;
     border-radius: 0 10px 10px 0;
-    border: 1px solid black;
+    border: 1px solid rgba(43, 41, 41, 0.615);
     border-left: 0px;
-    border-bottom: 0px;
+    display: flex;
+    align-items: center;
 }
 
-.combined-searchbar .search-filter {
+input {
+    width: 95%;
+    border: none;
+    outline: none;
+}
+
+.search-filter {
     border-bottom: 0;
 }
 
