--- a/frontend/src/Header/Header.css
+++ b/frontend/src/Header/Header.css
@@ -17,6 +17,10 @@
     cursor: pointer;
 }
 
+.navbutton {
+    font-size: 2em;
+}
+
 .navbuttonList {
     width: 100%;
     height: 100%;
@@ -28,12 +32,18 @@
 .nav-link {
     display: inline-block;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
+    font-size: 2em;
     border: none;
     background-color: white;
     transition: 0.5s;
     margin-left: 2rem;
     margin-right: 2rem;
+}
+
+@media screen and (max-width: 600px){
+    .nav-link {
+        font-size: 1.5em;
+    }
 }
 
 .nav-link:hover {
