--- a/frontend/src/MyFridge/myfridge.css
+++ b/frontend/src/MyFridge/myfridge.css
@@ -34,9 +34,15 @@
 }
 
 .fridge-category-title {
-    font-size: large;
+    font-size: 2em;
     font-weight: 400;
     margin: 10px;
+}
+
+@media screen and (max-width: 600px) {
+    .fridge-category-title {
+        font-size: 1.5em;
+    }
 }
 
 .fridge-functional-button {
@@ -44,10 +50,16 @@
     background-color: #E3DBF0;
     color: black;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    font-size: medium;
+    font-size: 1.6em;
     font-weight: 400;
     width: 150px;
     margin: 10px;
+}
+
+@media screen and (max-width: 600px) {
+    .fridge-functional-button {
+        font-size: 1.2em;
+    }
 }
 
 .fridge-functional-button:hover{
