--- a/frontend/src/Recipe/recipe.css
+++ b/frontend/src/Recipe/recipe.css
@@ -1,64 +1,5 @@
-.recipe-container{
-    width: 100%;
-    /* height: 80vh; */
-    /*position: absolute;*/
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    /*justify-content: center;*/
-}
-
 .bottom {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0;
-}
-
-.popRecipes-container {
-    width: 80%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    /* justify-content: flex-start; */
-    justify-content: center;
-    padding: 2%;
-    height: auto;
-}
-
-.popRecipe {
-    width: 360px;
-    height: 110px;
-    background: #FFFFFF;
-    opacity: 0.9;
-    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.15);
-    border-radius: 15px;
-    /* padding: 2%; */
-    margin: 10px;
-    display: flex;
-    align-items: center;
-}
-
-.poptitle {
-    font-size: small;
-    font-weight: 500;
-    margin-left: 10%;
-}
-
-.popImg {
-    display: block;
-    width: 35%;
-    height: 100%;
-    /* background: url(https://sudachirecipes.com/wp-content/uploads/2022/08/beef-curry-rice-thumbnail.jpg);
-    border-radius: 15px 0px 0px 15px; */
-}
-
-.popImg img{
-    /* width: 100%; */
-    /* background: url(https://sudachirecipes.com/wp-content/uploads/2022/08/beef-curry-rice-thumbnail.jpg); */
-    border-radius: 15px 0px 0px 15px;
-    max-height:100%;
-    max-width:100%;
+    margin-top: 0;
 }
 
 .page-pagination {
