--- a/frontend/src/Recipe/detail.css
+++ b/frontend/src/Recipe/detail.css
@@ -232,10 +232,12 @@ ul {
 
 
 .recipeedit-fixed-button {
-    position: fixed;
-    bottom: 5%;
-    right: 5%;
-    padding: 5px 20px 10px 20px;
+    /* position: fixed; */
+    position: sticky;
+    bottom: 2%;
+    /* right: 5%; */
+    left: 84%;
+    padding: 0.7em;
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 0.5rem;
@@ -248,7 +250,7 @@ ul {
 }
 
 .hover-effect:hover {
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
     opacity: 1;
     cursor: pointer;
 }
@@ -260,11 +262,21 @@ textarea {
 }
 
 .blur-all {
-    /* opacity: 0.5; */
+    opacity: 0.5; 
     color: rgba(0, 0, 0, 0.514);
 }
 
 .modal-content .editing-box {
     opacity: 1;
     color: rgba(0, 0, 0, 1);
+}
+
+#serving-input {
+    width: 3em;
+    border: 1px rgba(0, 0, 0, 0.533) solid;
+    padding: 0.5em;
+}
+
+#cancel-btn {
+    left: 75%
 }
