--- a/frontend/src/Recipe/detail.css
+++ b/frontend/src/Recipe/detail.css
@@ -234,9 +234,9 @@ ul {
 .recipeedit-fixed-button {
     /* position: fixed; */
     position: sticky;
-    bottom: 2%;
+    bottom: 3%;
     /* right: 5%; */
-    left: 84%;
+    left: 77%;
     padding: 0.7em;
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -278,5 +278,10 @@ textarea {
 }
 
 #cancel-btn {
-    left: 75%
+    left: 85%
+}
+
+.disabled-icon {
+    pointer-events: none;
+    opacity: 0.5;
 }
