--- a/frontend/src/Recipe/detail.css
+++ b/frontend/src/Recipe/detail.css
@@ -249,6 +249,24 @@ ul {
     z-index: 1000;
 }
 
+.recipeedit-delete-button {
+    /* position: fixed; */
+    position: sticky;
+    bottom: 3%;
+    /* right: 5%; */
+    left: 80%;
+    padding: 0.7em;
+    border: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 0.5rem;
+    background-color: rgba(255, 0, 0, 0.769);
+    color: black;
+    font-size: small;
+    font-weight: 500;
+    cursor: pointer;
+    z-index: 1000;
+}
+
 .hover-effect:hover {
     /* background-color: antiquewhite; */
     opacity: 1;
