--- a/frontend/src/MyPage/MyPage.css
+++ b/frontend/src/MyPage/MyPage.css
@@ -12,17 +12,18 @@
   /* margin-left: 5%; */
 }
 .main-mypage .left-section {
-  width: 50%;
+  width: 58%;
   height: 100%;
+  
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 .main-mypage .left-section .user-info-container {
-  padding: 4rem 1rem 4rem 4rem;
+  padding: 1rem 3rem 4rem 0rem;
   flex-direction: column;
   width: 100%;
-  height: 70%;
+  height: 100%;
   display: flex;
   align-items: flex-end;
 }
@@ -39,7 +40,9 @@
 }
 .main-mypage .left-section .user-info-container .user-pic-container .user-pic {
   max-height: 100%;
-  max-width: 100%;
+  /* max-width: 100%; */
+  height: 30vh;
+  /* width: 50vw; */
   text-align: center;
 }
 .main-mypage .left-section .user-info-container .user-name-container {
@@ -47,6 +50,8 @@
   text-align: center;
   margin: 5%;
   font-size: 1.8em;
+  display: flex;
+  justify-content: center;
   clear: both; /*清除浮動*/
 }
 .main-mypage .left-section .user-info-container .logout-btn {
@@ -71,6 +76,7 @@
 .main-mypage .right-section {
   width: 50%;
   height: 100%;
+  /* padding-left: 0rem; */
   /* margin-top: 5%; */
 }
 .main-mypage .right-section .setting-bar-container {
@@ -119,9 +125,61 @@
   /* margin-right: 8%; */
 }
 
-@media screen and (max-width: 600px){
+@media screen and (max-width: 800px){
   .setting-bar-icon {
     display: none;
+  }
+}
+@media screen and (max-width: 600px){
+  .setting-bar-icon {
+    display: flex;
+  }
+}
+@media screen and (max-width: 600px){
+  .main-mypage {
+    flex-direction: column;
+    align-items: center;
+    
+
+  }
+}
+@media screen and (max-width: 600px){
+  .main-mypage .left-section .right-section {
+    width: 100%;
+    /* align-items: center; */
+  }
+}
+@media screen and (max-width: 600px){
+  .main-mypage .left-section .user-info-container {
+    /* width: 100%; */
+    margin-right: 0%;
+    align-items: center;
+    /* align-items: center; */
+  }
+}
+@media screen and (max-width: 600px){
+  .main-mypage .right-section .setting-bar-container {
+    /* width: 100%; */
+    margin-right: 0%;
+    align-items: center;
+    /* align-items: center; */
+  }
+}
+/* @media screen and (max-width: 600px) {
+  .user-pic {
+    margin: auto;
+  }
+} */
+/* @media screen and (max-width: 600px){ */
+  /* .main-mypage .left-section .user-info-container .card { */
+    /* width: 100%; */
+    /* display: none; */
+    /* align-items: center; */
+  /* } */
+/* } */
+@media screen and (max-width: 600px){
+  .main-mypage .right-section {
+    width: 100%;
   }
 }
 
