--- a/frontend/src/MyPage/changePassword/ChangePassword.css
+++ b/frontend/src/MyPage/changePassword/ChangePassword.css
@@ -1,7 +1,18 @@
 .change-password {
-    width: 300px;
+    width: 100%;
 }
 .change-password .password-card {
     padding: 1rem;
-    border: 2px solid rgb(177, 89, 89);
+    border: 2px solid rgb(130, 130, 130);
+    box-shadow: 3px 3px 6px #d5d5d5;
+}
+.button-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 2.5rem;
+}
+.p-container {
+    display: flex;
+    justify-content: center;
+    margin: 1rem 0 2rem 0;
 }
