--- a/frontend/src/Settings/Settings.css
+++ b/frontend/src/Settings/Settings.css
@@ -171,11 +171,13 @@
 .labeladd-input {
     width: 150px;
     margin: 3px;
+    border: revert;
 }
 
 .labeladd-input-invalid {
     width: 150px;
     margin: 3px;
+    border: revert;
     border-color: red;
 }
 @media screen and (max-width: 600px){
