--- a/frontend/src/MyPage/MyPage.css
+++ b/frontend/src/MyPage/MyPage.css
@@ -155,6 +155,7 @@
     margin-right: 0%;
     align-items: center;
     /* align-items: center; */
+    padding: 0;
   }
 }
 @media screen and (max-width: 600px){
