fit comment font size

--- a/frontend/src/Recipe/detail.css
+++ b/frontend/src/Recipe/detail.css
@@ -155,7 +155,13 @@ ul {
 }
 
 .comments{
-    font-size: 30px;
+    font-size: 2.7em;
+}
+
+@media screen and (max-width: 600px) {
+    .comments {
+        font-size: 2em;
+    }
 }
 
 .single-comment-container {
@@ -176,6 +182,8 @@ ul {
 .comment-avatar {
     height: 4vw;
     width: 4vw;
+    min-width: 4em;
+    min-height: 4em;
 }
 
 .comment-avatar img{
