--- a/frontend/src/Recipe/detail.css
+++ b/frontend/src/Recipe/detail.css
@@ -251,7 +251,7 @@ ul {
     border-radius: 10px;
     padding: 5px;
     border-style: none;
-    width: 10%;
+    width: 55px;
     /* height: 10%; */
     margin-left: 1em;
 }
