--- a/frontend/src/SetPassword/SetPassword.css
+++ b/frontend/src/SetPassword/SetPassword.css
@@ -91,3 +91,21 @@ textarea:focus, input:focus{
     align-items: center;
     justify-content: center;
 }
+@media screen and (max-width: 750px) {
+    .container {
+        flex-direction: column;
+        justify-content: flex-start;
+    }
+}
+@media screen and (max-width: 750px) {
+    #feedmelogo {
+        display: none;
+    }
+}
+@media screen and (max-width: 750px) {
+    .container .body {
+        justify-content: start;
+        width: 100%;
+        margin-top: 3rem;
+    }
+}
