--- a/frontend/src/SetPassword/SetPassword.css
+++ b/frontend/src/SetPassword/SetPassword.css
@@ -33,6 +33,10 @@ textarea:focus, input:focus{
     width: 70%;
     height: 70%;
 }
+#feedmelogo2 {
+    width: 70%;
+    height: 70%;
+}
 
 #verify {
     display: flex;
@@ -92,18 +96,18 @@ textarea:focus, input:focus{
     justify-content: center;
 }
 @media screen and (max-width: 750px) {
-    .container {
+    .container2 {
         flex-direction: column;
         justify-content: flex-start;
     }
 }
-@media screen and (max-width: 750px) {
+/* @media screen and (max-width: 750px) {
     #feedmelogo {
         display: none;
     }
-}
+} */
 @media screen and (max-width: 750px) {
-    .container .body {
+    .container2 > body {
         justify-content: start;
         width: 100%;
         margin-top: 3rem;
