--- a/frontend/src/RegisterPage/RegisterPage.css
+++ b/frontend/src/RegisterPage/RegisterPage.css
@@ -33,6 +33,10 @@ textarea:focus, input:focus{
     width: 70%;
     height: 70%;
 }
+#feedmelogo2 {
+    width: 70%;
+    height: 70%;
+}
 
 #setpsw {
     float: right;
@@ -132,7 +136,7 @@ textarea:focus, input:focus{
 
 }
 
-.container {
+.container2 {
     /* position:fixed; */
     width:100%;
     height:100%;
@@ -171,19 +175,21 @@ label:hover {
 }
 
 @media screen and (max-width: 750px) {
-    .container {
+    .container2 {
         flex-direction: column;
         justify-content: flex-start;
     }
 }
+
 @media screen and (max-width: 750px) {
-    #feedmelogo {
+    #feedmelogo2 {
         display: none;
     }
 }
 @media screen and (max-width: 750px) {
-    .container .body {
+    .container2 > body {
         justify-content: start;
         width: 100%;
+        margin-top: 3rem;
     }
 }
