--- a/frontend/src/SetPassword/SetPassword.css
+++ b/frontend/src/SetPassword/SetPassword.css
@@ -34,8 +34,8 @@ textarea:focus, input:focus{
     height: 70%;
 }
 #feedmelogo2 {
-    width: 70%;
-    height: 70%;
+    width: 60%;
+    height: 60%;
 }
 
 #verify {
@@ -79,8 +79,8 @@ textarea:focus, input:focus{
 
 .body {
     display: flex;
-    width:80%;
-    height:80%;
+    width:70%;
+    height:90%;
     align-items: center;
     justify-content: center;
     flex-direction: column;
@@ -106,10 +106,10 @@ textarea:focus, input:focus{
         display: none;
     }
 } */
-@media screen and (max-width: 750px) {
+/* @media screen and (max-width: 750px) {
     .container2 > body {
         justify-content: start;
         width: 100%;
         margin-top: 3rem;
     }
-}
+} */
