--- a/frontend/src/RegisterPage/RegisterPage.css
+++ b/frontend/src/RegisterPage/RegisterPage.css
@@ -34,8 +34,8 @@ textarea:focus, input:focus{
     height: 70%;
 }
 #feedmelogo2 {
-    width: 70%;
-    height: 70%;
+    width: 50%;
+    height: 50%;
 }
 
 #setpsw {
@@ -128,8 +128,8 @@ textarea:focus, input:focus{
 
 .body {
     display: flex;
-    width:80%;
-    height:80%;
+    width:70%;
+    height:70%;
     align-items: center;
     justify-content: center;
     flex-direction: column;
@@ -138,8 +138,8 @@ textarea:focus, input:focus{
 
 .container2 {
     /* position:fixed; */
-    width:100%;
-    height:100%;
+    width:70%;
+    height:70%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -178,6 +178,7 @@ label:hover {
     .container2 {
         flex-direction: column;
         justify-content: flex-start;
+        width: 100%;
     }
 }
 
@@ -186,10 +187,10 @@ label:hover {
         display: none;
     }
 }
-@media screen and (max-width: 750px) {
+/* @media screen and (max-width: 750px) {
     .container2 > body {
         justify-content: start;
         width: 100%;
         margin-top: 3rem;
     }
-}
+} */
