RWD final season final part

--- a/frontend/src/SetPassword/SetPassword.css
+++ b/frontend/src/SetPassword/SetPassword.css
@@ -106,10 +106,8 @@ textarea:focus, input:focus{
         display: none;
     }
 } */
-/* @media screen and (max-width: 750px) {
-    .container2 > body {
-        justify-content: start;
+@media screen and (max-width: 750px) {
+    .body {
         width: 100%;
-        margin-top: 3rem;
     }
-} */
+}
